# TypeSystems

./: .gitignore  LICENSE  README.md
Agda/: GTFL.agda  README.md
arith/: Arith.hs  Main.hs  Parser.hs  test
fullError/: Eval.hs  Main.hs  test  (+4 more)
gradualSecurity/: .history  README.md  gradualSecurity.cabal
gradualSecurity/.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: MonadRandom-0.5.1-24mJHsyaRdxFE9YXzSnUr4  ansi-wl-pprint-0.6.7.3-Gr2V5sUh0vxILqRALkIOq0  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  djinn-ghc-0.0.2.3-5z85bZcLoZHKC4DwT3srQu  djinn-lib-0.0.1.2-4AmYn3IUBZ15IuinyTpUzc  either-4.4.1.1-FxsCaPgEXj475LRpcKBCw4  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fclabels-2.0.3.2-4EezQlp7n1w9uoh5Y3yxAt  ghc-mod-5.7.0.0-5ReaKN7bUlZHnrvtT2Db5g  ghc-syb-utils-0.2.3-AUrnhzkH67L4pEUPWJ0CZJ  happy-1.19.5  haskell-src-exts-1.18.2-FdgZn6spuZY5gmAQFozK1k  hlint-1.9.41-5dGQ3jFtiIB53JvL2OgS4P  hscolour-1.24.1-8bO2w1mmWhpHwQRVjkjSBA  mmorph-1.0.9-ICGdt4MChbCKIP6xXiQOq5  monad-control-1.0.1.0-Ip2R5znScoy8HmmgpKA7S3  monad-journal-0.7.2-BGiKIwdo7BE741cwA9JSzI  optparse-applicative-0.13.2.0-ve1qIqmIxO8MrWKuQCMeR  pipes-4.3.2-DH6Pd7R8iTP50NagSutyd4  safe-0.3.14-GsbXn9D9F3BDazVNcErzdQ  split-0.2.3.1-FWyXC6nhV0H3AfM8IzrEFk  temporary-1.2.0.4-4o5ZkUQDESvJnH2H08n0A5  transformers-base-0.4.4-KZ8OO8yrAWPeobFjeH7sR  utf8-string-1.0.1.1-1DpjxLeTvGg7ttZZojxJR5
gradualSecurity/src/: .history  CmdLineParser.hs  DynamicCheck.hs  Gamma.hs  Lattice.hs  Main.hs  Parser.hs  PrettyPrint.hs  Processor.hs  Repl.hs  StaticCheck.hs  Syntax.hs
gradualSecurity/tests/: staticFail  staticPass  test
(+65 files in other folders)
